[package]
name    = "dungeon"
version = "0.2.0"
edition = "2024"
authors = [ "Olivier Serve <tifauv@gmail.com>" ]

[dependencies.rand]
version = "0.9"

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    # Collections
    "dev",
    #"audio",
    "scene",
    #"picking",
    "default_app",
    "default_platform",
    "common_api",
    #"2d_api",
    #"2d_bevy_render",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    #"default_no_std"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
